--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "ngrok": "ngrok http 8080"
   },
   "dependencies": {
+    "firebase": "^4.1.2",
     "material-design-lite": "^1.3.0",
-    "vue": "^2.3.3",
+    "vue": "^2.3.4",
     "vue-router": "^2.3.1",
-    "vue2-google-maps": "^0.7.9"
+    "vue2-google-maps": "^0.7.9",
+    "vuefire": "^1.4.3"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
