--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "firebase": "^4.1.2",
     "material-design-lite": "^1.3.0",
     "vue": "^2.3.4",
+    "vue-resource": "^1.3.4",
     "vue-router": "^2.3.1",
     "vue2-google-maps": "^0.7.9",
     "vuefire": "^1.4.3"
