--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "ngrok": "ngrok http 8080"
   },
   "dependencies": {
+    "apollo-client": "^1.5.0",
     "firebase": "^4.1.2",
     "material-design-lite": "^1.3.0",
     "vue": "^2.3.4",
+    "vue-apollo": "^2.1.0-beta.9",
     "vue-resource": "^1.3.4",
     "vue-router": "^2.3.1",
     "vue2-google-maps": "^0.7.9",
